navbar complete, added fonts & colours, new service for cdk breakpoints

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,7 @@
         </ion-buttons>
         <ion-grid>
             <ion-row class="ion-justify-content-around">
+                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Logo</ion-button>
                 <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button active'>Acasă</ion-button>
                 <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Invitați</ion-button>
                 <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Cursuri</ion-button>
