--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-    <ion-menu type="overlay">
+    <ion-menu type="overlay" menu-id="main-menu">
         <ion-header>
             <ion-toolbar>
                 <ion-title>Menu</ion-title>
