started implementing hero component, need to change web navbar on home screen

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,11 @@
 <app-navbar></app-navbar>
 
 <ion-content>
+    <app-hero></app-hero>
+</ion-content>
+
+<!-- <ion-content>
     <ion-item>
         <ion-button (click)='testApi()'>Hello</ion-button>
     </ion-item>
-</ion-content>
+</ion-content> -->
