--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -2,6 +2,10 @@
     border-bottom: 5px solid var(--ion-color-primary);    
 }
 
+.active-home {
+    border-bottom: 5px solid white;
+}
+
 .navbar-button {
     font-size: 18px;
 }
