overlaying hero on navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,19 @@
-<ion-header>
-    <ion-toolbar>
+<ion-header style="box-shadow: 0px; border: 0px;">
+    <ion-toolbar style="box-shadow: 0px; border: 0px;" [ngClass]='{"navbar-home": !mobile && router.url == "/home"}'>
         <ion-buttons slot="start" *ngIf='mobile'>
             <ion-menu-button></ion-menu-button>
         </ion-buttons>
         <ion-grid>
             <ion-row class="ion-justify-content-around">
-                <ion-button fill='clear' expand='full' color="{router.url == '/home' ? light : dark}" *ngIf='!mobile' class='navbar-button'>Logo</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button active'>Acasă</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Invitați</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Cursuri</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Conferințe</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Instructori</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Sponsori</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Contact</ion-button>
-                <ion-button fill='clear' expand='full' color="dark" *ngIf='!mobile' class='navbar-button'>Login</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Logo</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button active'>Acasă</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Invitați</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Cursuri</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Conferințe</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Instructori</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Sponsori</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Contact</ion-button>
+                <ion-button fill='clear' expand='full' [attr.color]="router.url == '/home' ? 'light' : 'dark'" *ngIf='!mobile' class='navbar-button'>Login</ion-button>
             </ion-row>
         </ion-grid>
     </ion-toolbar>
