--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,1 +1,4 @@
-<img src='../../assets/images/hero.jpg' alt='Stary Night From the Island Hero Image' id='hero-image'>
+<img src='../../assets/images/17017233_10210709430104890_7762668526959517728_o.jpg' 
+alt='Stary Night From the Island Hero Image' 
+[ngClass]='{"overlay-navbar": !mobile}'
+id='hero-image'>
