--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -72,12 +72,14 @@
     --ion-color-medium-tint: #a2a4ab;
 
     /** light **/
-    --ion-color-light: #f4f5f8;
+    --ion-color-light: white;
     --ion-color-light-rgb: 244, 244, 244;
     --ion-color-light-contrast: #000000;
     --ion-color-light-contrast-rgb: 0, 0, 0;
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
+
+    $toolbar-background: transparent;
 }
 
 @font-face {
