--- a/src/app/courses/courses.page.html
+++ b/src/app/courses/courses.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>courses</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-navbar></app-navbar>
 
 <ion-content>
 
