--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]='{"active-home" : router.url == "/home"}'>
+                    (click)="navigateToHome()">
                     Logo
                 </ion-button>
                 <ion-button 
@@ -21,6 +21,7 @@
                     *ngIf='!mobile' 
                     class='navbar-button'
                     [ngClass]='{"active-home": router.url == "/home"}'
+                    (click)="navigateToHome()"
                     >
                     Acasă
                 </ion-button>
@@ -30,7 +31,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToInvitations()">
                     Invitați
                 </ion-button>
                 <ion-button 
@@ -39,7 +40,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToCourses()">
                     Cursuri
                 </ion-button>
                 <ion-button 
@@ -48,7 +49,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToConferences()">
                     Conferințe
                 </ion-button>
                 <ion-button 
@@ -57,7 +58,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToInstructors()">
                     Instructori
                 </ion-button>
                 <ion-button 
@@ -66,7 +67,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToSponsors()">
                     Sponsori
                 </ion-button>
                 <ion-button 
@@ -75,7 +76,7 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToContact()">
                     Contact
                 </ion-button>
                 <ion-button 
@@ -84,7 +85,8 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    [ngClass]="{'active-home': router.url == '/home'}">
+                    (click)="navigateToLogin()"
+                    >
                     Login
                 </ion-button>
             </ion-row>
