fixed navbar border based on link, fixed navigation animation bug

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -2,3 +2,5 @@
 alt='Stary Night From the Island Hero Image' 
 [ngClass]='{"overlay-navbar": !mobile}'
 id='hero-image'>
+
+<h1 id='hero-title'>ATLANTYKRON</h1>
