--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -1,3 +1,9 @@
+#hero-title {
+    color: white;
+    font-size: 70px;
+    font-weight: bold;
+}
+
 #hero-image {
     height: auto;
     max-height: 100%;
