fixed weird navbar behavior on chrome

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,4 +3,4 @@ alt='Stary Night From the Island Hero Image'
 [ngClass]='{"overlay-navbar": !mobile}'
 id='hero-image'>
 
-<h1 id='hero-title'>ATLANTYKRON</h1>
+<h1 id='hero-title'>Academia Atlantykron</h1>
