--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -1,12 +1,12 @@
-#hero-title {
-    color: white;
-    font-size: 70px;
+.call-to-action {
     font-weight: bold;
-    z-index: 2;
-    position: absolute;
+    --padding-bottom: 25px;
+    --padding-end: 40px;
+    --padding-start: 40px;
+    --padding-top: 25px;
 }
 
-#hero-image {
+#hero-content {
     height: auto;
     max-height: 100%;
     width: 100%;
@@ -14,7 +14,32 @@
     z-index: 0;
 }
 
+#hero-content-position {
+    left: 50%;
+    text-align: center;
+    top: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+#hero-image {
+    width: 100%;
+}
+
+.hero-subheader {
+    color: white;
+    opacity: 80%;
+    font-size: 40px;
+    font-style: italic;
+}
+
+#hero-title {
+    color: white;
+    font-size: 60px;
+    font-weight: bolder;
+}
+
 .overlay-navbar {
     margin-top: -10%;
 }
-
