--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,10 @@
-<app-navbar></app-navbar>
 
 <ion-content fullscreen>
+    <app-navbar></app-navbar>
     <app-hero></app-hero>
+    <h2>hey</h2>
+    <h2>hey</h2>
+    <h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2><h2>hey</h2>
 </ion-content>
 
 <!-- <ion-content>
