--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <ion-header [attr.no-border]='router.url == "/home" ? true : null' [ngClass]='{"ion-header-padding": !mobile && router.url == "/home"}'>
-    <ion-toolbar [ngClass]='{"navbar-home": !mobile && router.url == "/home"}'>
+    <ion-toolbar [ngClass]='{"navbar-home": !mobile && router.url == "/home"}' scroll='false'>
         <ion-buttons slot="start" *ngIf='mobile'>
-            <ion-menu-button></ion-menu-button>
+            <ion-menu-button [attr.color]="router.url == '/home' ? 'light' : 'dark'"></ion-menu-button>
         </ion-buttons>
         <ion-grid>
             <ion-row class="ion-justify-content-center">
@@ -96,6 +96,6 @@
                     Login
                 </ion-button>
             </ion-row>
-        </ion-grid>
+        </ion-grid >
     </ion-toolbar>
 </ion-header>
