added scrim, adjusted margins

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -5,9 +5,10 @@
             <ion-button shape='round' class='call-to-action' [ngClass]='{"space-hero-btn": !mobile}'>
                 Înscrie-te în Aventură
             </ion-button>
-            <h2 class='hero-subheader' *ngIf='tablet' [ngClass]='{"space-hero-subt": !mobile}'>Ediția 31 de Ani</h2>
-            <h2 class='hero-subheader' *ngIf='tablet'>02 August - 11 August 2020</h2>
-            <div id='scrim'></div>
+            <div id='scrim'>
+                <h2 class='hero-subheader' *ngIf='tablet' [ngClass]='{"space-hero-subt": !mobile}'>Ediția 31</h2>
+                <h2 class='hero-subheader' *ngIf='tablet'>02 August - 11 August 2020</h2>
+            </div>
         </div>
     </div>
 </div>
