--- a/src/app/invitations/invitations.page.html
+++ b/src/app/invitations/invitations.page.html
@@ -7,7 +7,7 @@
 
 			</ion-col>
 			<ion-col>
-				<ion-item>
+				<ion-item class="select-year">
 					<ion-label>Selectati anul</ion-label>
 					<ion-select>
 						<ion-select-option value="all">Toti anii</ion-select-option>
@@ -15,113 +15,19 @@
 						<ion-select-option value="2018">2018</ion-select-option>
 					</ion-select>
 				</ion-item>
-				<ion-list>
-					<ion-item (click)="presentPopover($event); $event.preventDefault(); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
+				<ion-list>  
+                    <ion-item button class="invitate" *ngFor="let invitate of invitations" (click)="presentPopover($event)">
+                        <ion-avatar class="avatar" slot="start">
+                          <img src="../../assets/images/avatar.png">
+                        </ion-avatar>
+                        <ion-label>
+                          <h2 class="name-label">{{invitate.name+' '+invitate.surname}}</h2>
+                        </ion-label>
+                        
+                      </ion-item>
+                                 
+                  </ion-list>
 
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-					<ion-item (click)="presentPopover($event); $event.preventDefault()" href="">
-						<ion-avatar slot="start">
-							<img src="../assets/images/avatar.png">
-						</ion-avatar>
-						<ion-label>
-							<h2>Finn Alexander</h2>
-						</ion-label>
-					</ion-item>
-				</ion-list>
 			</ion-col>
 			<ion-col>
 
