--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,7 @@
                             <polyline id="arrow1" points="26.948,58.5 17.136,68.313   7.323,58.5 " />
                             <polyline id="arrow2" points="26.948,65.25 17.136,75.063   7.323,65.25 " />
                         </svg>
+                        <hr class='card-section-divider'>
                     </ion-col>
                 </ion-row>
             </ion-grid>
