--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,8 +2,8 @@
     <app-navbar></app-navbar>
     <app-hero></app-hero>
     <div id='home-screen'>
-        <div id='material-card'>
-            <ion-grid>
+        <div id='material-card' [ngClass]="{'bump-up-mobile': mobile}">
+            <ion-grid [ngClass]="{'first-card-section-divider-bump-up': mobile}">
                 <ion-row class='main-col'>
                     <ion-col class='justify-content-center'>
                         <svg xmlns="http://www.w3.org/2000/svg" width="34.375" height="80.375"
@@ -14,6 +14,7 @@
                             <polyline id="arrow2" points="26.948,65.25 17.136,75.063   7.323,65.25 " />
                         </svg>
                         <hr class='card-section-divider'>
+                        <app-presentation></app-presentation>
                     </ion-col>
                 </ion-row>
             </ion-grid>
