--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,12 +1,20 @@
+.bump-up-mobile {
+	margin-top: -200px !important;
+}
+
 .card-section-divider {
 	background-color: var(--ion-color-secondary);
 	margin-top: -70px;
 	width: 50px;
 }
 
+.first-card-section-divider-bump-up {
+	margin-top: 165px;
+}
+
 #home-screen {
 	background-color: #eeeeee;
-	height: 105%;
+	height: 130%;
 	margin-top: -50px;
 }
 
@@ -17,9 +25,9 @@
 
 #material-card {
 	background-color: white;
-	border-radius: 3%;
+	border-radius: 55px;
 	box-shadow: 380px;
-	height: 110%;
+	height: 130%;
 	left: 0;
 	margin: -65px auto 0 auto;
 	margin-left: auto;
