presentation section done

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-content fullscreen>
+<ion-content fullscreen id='home-page'>
     <app-navbar></app-navbar>
     <app-hero></app-hero>
     <div id='home-screen'>
@@ -15,6 +15,7 @@
                         </svg>
                         <hr class='card-section-divider'>
                         <app-presentation></app-presentation>
+                        <hr class='presentation-section-divider card-section-divider'>
                     </ion-col>
                 </ion-row>
             </ion-grid>
