--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,5 @@
 .bump-up-mobile {
-	margin-top: -200px !important;
+	margin-top: -300px !important;
 }
 
 .card-section-divider {
@@ -35,6 +35,10 @@
 	position: absolute;
 	right: 0;
 	width: 90%;
+}
+
+.presentation-section-divider {
+	margin-top: 70px;
 }
 
 svg {
