--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -17,7 +17,7 @@
 			</div>
 		</ion-col>
 		<!-- <img src="../../assets/illustrations/Path 2575.svg" id='first-path'/> -->
-		<ion-col>
+		<ion-col class='illustration-column'>
 			<img src="../../assets/illustrations/Art Illustration.svg" 
 				class='presentation-illustration illustration-bump-down'
 				alt="Art Illustration"/>
@@ -30,7 +30,7 @@
 				</div>
 		</ion-col>
 		<!-- <img src="../../assets/illustrations/Path 2577.svg" id='third-path'/> -->
-		<ion-col>
+		<ion-col class='illustration-column'>
 			<img src="../../assets/illustrations/Culture Illustration.svg" 
 				class='presentation-illustration'
 				alt="Culture Illustration"/>
@@ -43,7 +43,7 @@
 				</div>
 		</ion-col>
 		<!-- <img src="../../assets/illustrations/Path 2575.svg" id='second-path'/> -->
-		<ion-col>
+		<ion-col class='illustration-column'>
 			<img src="../../assets/illustrations/Sport Illustration.svg" 
 				class='presentation-illustration illustration-bump-down'
 				alt="Sport Illustration"/>
