--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -12,11 +12,16 @@
     margin-top: 75px;
 }
 
+.illustration-column {
+    max-width: 230px;
+}
+
 .illustration-content-container {
     margin-left: 70px;
     justify-content: center;
     text-align: center;
 }
+
 
 .illustration-subtitle {
     font-weight: bold;
