instructors page, instructors service

--- a/src/app/instructors/instructors.page.html
+++ b/src/app/instructors/instructors.page.html
@@ -2,4 +2,162 @@
 
 <ion-content>
 
+    <div id="background">
+        <div id="card">
+            
+            <div id="timeline">
+                <h4 (click)="toggle1()" [ngClass]=" status1 == true ? 'year-active' : 'year' " >Instructori 2019</h4>
+                <h4 (click)="toggle2()" [ngClass]=" status2 == true ? 'year-active' : 'year' " >Instructori 2018</h4>
+                <h4 (click)="toggle3()" [ngClass]=" status3 == true ? 'year-active' : 'year' " >Instructori 2017</h4>
+            </div>
+            
+            <div id="main">
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card button>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+                <div class="id-card">
+                    <ion-card>
+                        <img src="../../assets/images/avatar.png" />
+                        <ion-card-header>
+                          <ion-card-subtitle>Ocupatie</ion-card-subtitle>
+                          <ion-card-title>Nume Prenume</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                          Scurta descriere...
+                        </ion-card-content>
+                      </ion-card>                
+                </div>
+            </div>
+
+        </div>
+      </div>
 </ion-content>
