--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
-
+<app-navbar></app-navbar>
 <ion-content class="animated bounceIn">
-    <app-navbar></app-navbar>
+    
 
     <div id="background">
         <div id="card">
@@ -29,7 +29,7 @@
                         </div>
                     </ion-col>
                     <ion-col justify-content-center>
-                        <img width="50%" src="../../assets/images/login.svg">
+                        <img src="../../assets/images/login.svg">
                     </ion-col>
                 </ion-row>
             </ion-grid>
