--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -14,7 +14,7 @@
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     box-shadow: 10px 10px 20px 10px rgba(0, 0, 255, .2);
-
+    margin-bottom: 30px;
 }
 
 
@@ -24,8 +24,9 @@
     align-self: center;
     width: 60%;
     //background-color: #caaaaa;
-    //padding:50px;
+    //padding:30px;
 }
+
 
 ion-col{
     display: flex;
@@ -47,20 +48,4 @@ a{
     color: rgb(59, 23, 156);
     margin-top: 16px;
     cursor: pointer;
-    animation: anchor_hover 2s infinite;
-    border-color: red;
-}
-//a:hover{
-    //color: red;
-//}
-
-@keyframes anchor_hover{
-    0%,
-	50% {
-		font:14px;
-	}
-
-	100% {
-		font:20px;
-	}
 }
